--- a/pokojones/html/pokojohns-pizza.html
+++ b/pokojones/html/pokojohns-pizza.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokoJohn's Pizza</title>
-    <link rel="stylesheet" href="/css/jo.css">
+    <link rel="stylesheet" href="/pokojones/css/jo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +33,7 @@
         </nav>
     </div>
 
-    <img class="lok" src="/obrazki/lokal.png">
+    <img class="lok" src="/pokojones/obrazki/lokal.png">
     <div class="lokal">
         <h1 class="lok-desc">Najlepsza pizzeria w szczecinie</h1>
     </div>
