--- a/pokojones/html/pokojohns-pizza.html
+++ b/pokojones/html/pokojohns-pizza.html
@@ -46,14 +46,14 @@
         </div>
         <div class="menu-positions">
             <ul class="menu-list">
-                <li><a href="" class="menu-link">1. PIZZE</a></li>
-                <li><a href="" class="menu-link">2. MAKARONY</a></li>
-                <li><a href="" class="menu-link">3. DODATKI</a></li>
-                <li><a href="" class="menu-link">4. NAPOJE</a></li>
+                <li><a href="" class="menu-link" id="p1">1. PIZZE</a></li>
+                <li><a href="" class="menu-link" id="p2">2. MAKARONY</a></li>
+                <li><a href="" class="menu-link" id="p3">3. DODATKI</a></li>
+                <li><a href="" class="menu-link" id="p4">4. NAPOJE</a></li>
             </ul>
         </div>
         <div class="menu-positions menu-desc">
-            <p class="desc">
+            <p class="desc" id="output">
                 Pizze z najlepszej jakości składników -
                 najwyższej klasy pomidory, ciągnący się ser i różne dodatki.
             </p>
