--- a/pokojones/html/index.html
+++ b/pokojones/html/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="list">
                     <ul>
-                        <li><a href="pokojohns-pizza.html" class="list-a red">start</a></li>
+                        <li><a href="index.html" class="list-a red">start</a></li>
                         <li><a href="#" class="list-a">menu</a></li>
                         <li><a href="#" class="list-a">dowóz</a></li>
                         <li><a href="#" class="list-a">kontak</a></li >
